# plfm-vt

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: docs.yml  proto.yml  rust.yml
api/openapi/: openapi.yaml
api/proto/: buf.gen.yaml  buf.yaml
api/schemas/: event-envelope.json  manifest.json  node-plan.json  workload-spec.json
cli/ghostctl/: Cargo.toml
cli/ghostctl/src/: client.rs  config.rs  error.rs  idempotency.rs  main.rs  manifest.rs  output.rs  resolve.rs
cli/ghostctl/src/commands/: apply.rs  apps.rs  auth.rs  context.rs  debug.rs  deploys.rs  envs.rs  events.rs  exec.rs  instances.rs  logs.rs  manifest.rs  mod.rs  nodes.rs  orgs.rs  projects.rs  releases.rs  routes.rs  scale.rs  secrets.rs  status.rs  volumes.rs
docs/: ADVERSARIAL-REVIEW.md  DECISIONS-LOCKED.md  GLOSSARY.md  INDEX.md  NONGOALS.md  README.md  unnamed-plf-vt.md  unnamed-plfm-vt-doc-checklist.md  unnamed-plfm-vt.md
docs/ADRs/: (0001-4)-open-questions-decisions.md  (0009-12)-open-questions-decisions.md  0001-isolation-microvm-per-env.md  0001-isolation-microvm-per-instance.md  0002-artifact-oci-image-plus-manifest.md  0003-runtime-firecracker.md  0004-overlay-wireguard-full-mesh.md  0005-state-event-log-plus-materialized-views.md  0006-control-plane-db-postgres.md  0007-network-ipv6-first-ipv4-paid.md  0008-ingress-l4-sni-passthrough-first.md  0009-proxy-protocol-v2-client-ip.md  0010-secrets-delivery-file-format.md  0011-storage-local-volumes-async-backups.md  0012-scheduling-cpu-oversubscribe-mem-hardcap.md  0013-nixos-as-host-os.md  open-questions-0005_0008.md
docs/architecture/: 00-system-overview.md  01-control-plane.md  02-data-plane-host-agent.md  03-edge-ingress-egress.md  04-state-model-and-reconciliation.md  05-multi-tenancy-and-identity.md  06-failure-model-and-degraded-modes.md  07-scaling-plan-multi-host.md  08-security-architecture.md  09-observability-architecture.md  10-actors-and-supervision.md
docs/cli/: 00-principles.md  01-command-map.md  02-manifest-workflow.md  03-auth-and-context.md  04-errors-and-exit-codes.md  05-templates-and-examples.md  06-debug-tooling.md  07-TUI-workbench-v1.md
docs/engineering/: README.md  build-and-release.md  coding-standards.md  compatibility-and-versioning.md  core-loop-demo.md  dev-environment.md  implementation-plan.md  implementing-a-new-resource.md  performance-testing.md  repo-layout.md  staff-handoff.md  testing-strategy.md
docs/frontend/: 00-overview.md  01-terminal-protocol.md  02-pty-bridge.md  03-security-model.md  04-performance-latency-budget.md  05-failure-modes.md  06-wasm-component-contract.md  07-worker-message-schema.md  08-render-loop.md  README.md
docs/ops/: 00-sre-principles.md  (+7 more)
libs/events/: Cargo.toml
libs/events/src/: envelope.rs  error.rs  lib.rs  types.rs
libs/id/: Cargo.toml
libs/id/src/: error.rs  lib.rs  macros.rs  types.rs
libs/proto/: Cargo.toml  build.rs
libs/proto/src/: lib.rs
libs/reconcile/: Cargo.toml
libs/reconcile/src/: lib.rs
scripts/: linear_sync_docs.py
services/control-plane/: Cargo.toml  README.md
services/control-plane/migrations/: 00001_create_events_table.sql  00002_create_projection_checkpoints.sql  00003_create_idempotency_records.sql  00004_create_core_views.sql  00005_create_projects_view.sql  00006_create_auth_tables.sql  00007_create_secret_material.sql  00008_create_ipam_instances.sql  00009_create_exec_session_tokens.sql  00010_create_workload_logs.sql  00011_create_ipam_ipv4_and_nodes.sql  00012_add_command_to_releases.sql  00013_add_node_overlay_ipv6.sql  00014_add_protobuf_payload.sql
services/control-plane/src/: config.rs  lib.rs  main.rs  secrets.rs  state.rs
services/control-plane/src/api/: authz.rs  error.rs  health.rs  idempotency.rs  mod.rs  request_context.rs  tokens.rs
services/control-plane/src/api/v1/: apps.rs  auth.rs  debug.rs  deploys.rs  env_instances.rs  env_networking.rs  envs.rs  events.rs  exec.rs  exec_sessions.rs  instances.rs  logs.rs  members.rs  mod.rs  nodes.rs  orgs.rs  projects.rs  releases.rs  routes.rs  secrets.rs  volume_attachments.rs  volumes.rs
services/control-plane/src/cleanup/: mod.rs  worker.rs
services/control-plane/src/db/: error.rs  event_store.rs  idempotency.rs  mod.rs  projections.rs  quotas.rs
services/control-plane/src/grpc/: mod.rs  node_agent.rs
services/control-plane/src/projections/: apps.rs  deploys.rs  env_config.rs  env_networking.rs  envs.rs  exec_sessions.rs  instances.rs  members.rs  mod.rs  nodes.rs  orgs.rs  projects.rs  releases.rs  restore_jobs.rs  routes.rs  secret_bundles.rs  snapshots.rs  volume_attachments.rs  volumes.rs  worker.rs
services/control-plane/src/scheduler/: mod.rs  reconciler.rs  worker.rs
services/control-plane/tests/: auth_api.rs  core_loop.rs  nodes_api.rs
services/guest-init/: Cargo.toml
services/guest-init/src/: config.rs  error.rs  exec.rs  handshake.rs  health.rs  logging.rs  main.rs  mount.rs  network.rs  secrets.rs  workload.rs
services/ingress/: Cargo.toml  README.md
services/ingress/src/: config.rs  lib.rs  main.rs  persistence.rs  sync.rs
services/ingress/src/proxy/: backend.rs  listener.rs  mod.rs  proxy_protocol.rs  router.rs  sni.rs
services/ingress/tests/: backend_recovery.rs  harness.rs  m4_ipv6_first.rs
services/node-agent/: Cargo.toml  README.md
services/node-agent/src/: client.rs  config.rs  exec.rs  exec_gateway.rs  grpc_client.rs  heartbeat.rs  instance.rs  lib.rs  main.rs  reconciler.rs  resources.rs  runtime.rs  vsock.rs
services/node-agent/src/actors/: framework.rs  image.rs  instance.rs  mod.rs  stream.rs  supervisor.rs
services/node-agent/src/firecracker/: api.rs  config.rs  jailer.rs  mod.rs  runtime.rs
services/node-agent/src/image/: cache.rs  mod.rs  oci.rs  puller.rs  rootdisk.rs
services/node-agent/src/network/: mod.rs  tap.rs
services/node-agent/src/state/: mod.rs  store.rs
services/node-agent/tests/: actors.rs  image_pipeline.rs  m3_status_reporting.rs  reconciliation.rs
test/e2e/: Cargo.toml  happy_path.rs
tools/api-validate/: Cargo.toml
tools/api-validate/src/: main.rs
(+111 files in other folders)
