[workspace]
resolver = "2"

members = [
    "libs/id",
    "libs/events",
    "libs/reconcile",
    "libs/secrets-format",
    "libs/networking",
    "libs/testing",
    "services/control-plane",
    "services/node-agent",
    "services/ingress",
    "services/guest-init",
    "cli/ghostctl",
    "tools/api-validate",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plfm-vt/plfm-vt"
rust-version = "1.90"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IDs
ulid = "1.2"
uuid = { version = "1.19", features = ["v4", "v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
    "stream",
], default-features = false }
futures-core = "0.3"
futures-util = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6.0"
tabled = "0.20"
colored = "3.0"

# Database
# Note: macros feature disabled to avoid compile-time db connection requirement
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "migrate",
] }

# Async traits
async-trait = "0.1"

# Validation
validator = { version = "0.20", features = ["derive"] }
jsonschema = { version = "0.37", default-features = false }

# Config
config = "0.15"

# Testing
proptest = "1.9"
rstest = "0.26"
wiremock = "0.6"
testcontainers = "0.26"

# Crypto
sha2 = "0.10"
toml = "0.9"
base64 = "0.22"
rand = "0.9"

# Internal crates
plfm-id = { path = "libs/id" }
plfm-events = { path = "libs/events" }
plfm-reconcile = { path = "libs/reconcile" }
plfm-secrets-format = { path = "libs/secrets-format" }
plfm-networking = { path = "libs/networking" }
plfm-testing = { path = "libs/testing" }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.release.package.plfm-guest-init]
# Optimize for size - guest init should be minimal
opt-level = "z"

[profile.dev]
# Faster builds in dev
debug = 1
