[package]
name = "ghostctl"
description = "CLI for plfm-vt platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vt"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# CLI framework
clap = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs
plfm-id = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Manifest + hashing
sha2 = { workspace = true }
toml = { workspace = true }
jsonschema = { workspace = true }

# Config directory
directories = { workspace = true }

# Output formatting
tabled = { workspace = true }
colored = { workspace = true }

# WebSocket for exec streaming
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Terminal handling
crossterm = "0.27"
libc = "0.2"

# Ctrl+C handling
ctrlc = "3.4"
