[package]
name = "plfm-id"
description = "Stable ID types, parsing, and validation for plfm-vt platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
