[package]
name = "plfm-control-plane"
description = "Control plane API server for plfm-vt platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "control-plane"
path = "src/main.rs"

[dependencies]
plfm-id = { workspace = true }
plfm-events = { workspace = true }
plfm-proto = { workspace = true }
plfm-secrets-format = { workspace = true }

prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
prost-012 = { package = "prost", version = "0.12" }
tonic = { workspace = true }

tokio = { workspace = true }

# HTTP framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Database
sqlx = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Crypto
sha2 = { workspace = true }
uuid = { workspace = true }
aes-gcm = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
reqwest = { workspace = true }
testcontainers = { workspace = true }
