[package]
name = "plfm-guest-init"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Platform PID 1 process for Firecracker microVMs"

[[bin]]
name = "guest-init"
path = "src/main.rs"

[dependencies]
# Async runtime - minimal features for small binary
tokio = { version = "1.48", features = [
    "rt",
    "net",
    "io-util",
    "sync",
    "signal",
    "process",
    "time",
    "fs",
    "macros",
] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Unix-specific
nix = { version = "0.30", features = [
    "signal",
    "process",
    "mount",
    "user",
    "fs",
    "hostname",
    "net",
    "ioctl",
    "term",
] }
libc = "0.2"

# vsock support
vsock = "0.5"

# UUID for boot_id generation
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.23"

[features]
default = []
# Include busybox for debugging (increases binary size)
busybox = []
