[package]
name = "plfm-ingress"
description = "Ingress service for plfm-vt platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ingress"
path = "src/main.rs"

[dependencies]
plfm-events = { workspace = true }
plfm-id = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Atomic pointer swaps for lock-free config reload
arc-swap = "1.7"
