[package]
name = "plfm-node-agent"
description = "Node agent for plfm-vt platform - manages workload lifecycle on hosts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "node-agent"
path = "src/main.rs"

[dependencies]
plfm-id = { workspace = true }
plfm-events = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }
hyper = { version = "0.14", features = ["client", "http1"] }
hyperlocal = "0.8"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Firecracker runtime
libc = "0.2"

# OCI image handling
flate2 = "1.0"
tar = "0.4"
sha2 = { workspace = true }
hex = "0.4"
futures-core = { workspace = true }
tokio-stream = "0.1"

# Local state persistence
rusqlite = { version = "0.32.1", features = ["bundled"] }

# Vsock for guest communication
vsock = "0.5"

[dev-dependencies]
rstest = { workspace = true }
