[package]
name = "plfm-api-validate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "plfm-api-validate"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
walkdir = "2.5"
serde_yaml = "0.9"
